# sitewalk-archive

./: .gitignore  README.md
apps/ios/: .gitignore  README.md  build-ffi.sh  generate.sh  project.local.yml.template  project.yml
apps/ios/Sources/App/: AppModel.swift  GalleryApp.swift  Info.plist
apps/ios/Sources/Engine/: MurmurEngine.swift  WalkEngine.swift
apps/ios/Sources/Flow/: WalkView.swift
crates/evals/src/: grade.rs  lib.rs  normalize.rs
crates/evals/tests/: carried_scenarios.rs
crates/ffi/: Cargo.toml  uniffi-bindgen.rs
crates/ffi/src/: convert.rs  engine.rs  lib.rs  session.rs
crates/ffi/tests/: bridge_e2e.rs
crates/harness/src/: agent.rs  context.rs  error.rs  lib.rs  llm.rs  mock.rs  tool.rs
crates/harness/src/memory/: mod.rs  tool.rs
crates/harness/src/providers/: anthropic.rs
crates/harness/src/reflection/: engine.rs  policy.rs
crates/harness/tests/: agent_anthropic_e2e.rs
crates/murmur-core/src/: coordinator.rs  domain.rs  lib.rs
crates/murmur-core/src/pipeline/: live.rs  mod.rs  tools.rs
crates/murmur-core/src/store/: artifacts.rs  documents.rs  items.rs  migrations.rs  sessions.rs
crates/murmur-core/tests/: live_extraction_e2e.rs  source_swap_e2e.rs
docs/plans/: 2026-07-04-rust-core-06-stt-crate.md  2026-07-04-rust-core-06a-source-column-swap-fix.md  2026-07-04-rust-core-07-ffi-bridge.md
meta/: ROADMAP.md
meta/dam/: STATE.md
spikes/stt-whisper/: RESULTS.md  gen-audio.sh
spikes/stt-whisper/audio/references/: jargon1.txt  jargon2.txt  terms.txt
spikes/stt-whisper/src/: bench.rs  main.rs
